# dbs-cli

./: .gitignore  Cargo.toml  Makefile  README.md  README_zh.md  deny.toml
.github/workflows/: check.yaml
docs/: args.md  dependency.md
docs/zh/: dependency_zh.md
src/: api_client.rs  api_server.rs  cli_instance.rs  main.rs  utils.rs  vmm_comm_trait.rs
src/parser/: args.rs  mod.rs
